--- a/package.json
+++ b/package.json
@@ -6,16 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.19",
     "date-fns": "^2.30.0",
-    "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype": "^13.0.0",
-    "rehype-raw": "^7.0.0",
-    "rehype-stringify": "^10.0.0",
-    "remark": "^14.0.3",
-    "remark-html": "^15.0.2",
-    "remark-rehype": "^10.1.0"
+    "remark": "^14.0.3"
   }
 }
