--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype": "^13.0.0",
-    "remark": "^14.0.3"
+    "remark": "^14.0.3",
+    "sharp": "^0.32.5"
   }
 }
