--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.19",
     "date-fns": "^2.30.0",
+    "feed": "^4.2.2",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
