--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.4.19",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.7",
     "date-fns": "^2.30.0",
     "feed": "^4.2.2",
-    "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^15.1.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "rehype": "^13.0.0",
     "remark": "^14.0.3",
     "sharp": "^0.32.5"
